# remnote-graph-rag

./: .dockerignore  .env.example  .env.example.py  .gitignore  README.md  pyproject.toml  rxconfig.py
.github/workflows/: deploy-vllm.yml  deploy.yml
app/: app.py  components.py  state.py  strings.py  styles.py
backend/: health.py
backend/configs/: constants.py  enums.py  messages.py  models.py  observability.py  paths.py  search.py  storage.py
backend/data_processing/: ocr.py  parser.py  utils.py
backend/knowledge_graph/: custom_types.py  indexer.py  storage.py
backend/llm/prompts/learner_workflow/analyst/: v1.yaml  v2.yaml  v3.yaml
backend/llm/prompts/learner_workflow/mentor/: v2.yaml  v3.yaml  v4.yaml
backend/llm/prompts/learner_workflow/researcher/: v1.yaml  v2.yaml  v3.yaml
backend/llm/prompts/learner_workflow/retriever/: v1.yaml  (+2 more)
backend/utils/: common_funcs.py  helpers.py  prompt_engine.py
backend/workflows/: learner.py  learner_reflex.py
backend/workflows/agents/: factory.py  schemas.py  tools.py
configs/: constants.py  enums.py  models.py  paths.py  search.py  storage.py
deploy/: Caddyfile.frontend  Dockerfile  Dockerfile.frontend  Dockerfile.vllm
scripts/: backup_mongodb.sh  build_graph_index.py  export_langsmith_logs.py  migrate_to_cloud.py  parse_data.py  parse_langsmith_traces.py  setup_mongodb_backup_vm.sh
src/data_processing/: ocr.py  parser.py  utils.py
src/utils/: helpers.py  prompt_engine.py
src/workflows/: learner.py
src/workflows/agents/: factory.py  tools.py
src/workflows/knowledge_graph/: base.py  storage.py
(+8 files in other folders)
